Feature: Clear results on new image upload in insect.html
- Implemented logic in 'insect.html' to clear previously displayed analysis results (text, graph, features) whenever a new image is selected for upload.
- Ensures a clean slate for each new image analysis.

--- a/insect.html
+++ b/insect.html
@@ -224,6 +224,16 @@
 
         document.getElementById('imageUpload').addEventListener('change', function(event) {
             const file = event.target.files[0];
+            const resultDiv = document.getElementById('result');
+            const predictionGraphDiv = document.getElementById('predictionGraph');
+            const insectFeaturesDiv = document.getElementById('insectFeatures');
+
+            // Clear previous results
+            resultDiv.textContent = '여기에 결과가 표시됩니다.'; // Reset to initial text
+            predictionGraphDiv.innerHTML = '';
+            insectFeaturesDiv.innerHTML = '';
+            insectFeaturesDiv.style.display = 'none';
+
             if (file) {
                 const reader = new FileReader();
                 reader.onload = function(e) {
