Fix: Ensure consistent CSS loading for theme switcher
- Removed 'media="print" onload="this.media=\'all\'"' and 'noscript' tags from stylesheet links in 'index.html', 'insect.html', and 'sentiment.html'.
- This ensures that 'style.css' is loaded immediately and unconditionally across all pages, which should resolve issues with the theme switcher functionality.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <meta name="twitter:description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="style.css"></noscript>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="fa.ico">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
