--- a/sentiment.html
+++ b/sentiment.html
@@ -18,8 +18,7 @@
     <meta name="twitter:description" content="금융 시장의 심리를 알아보고 투자 결정에 참고하세요.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="style.css"></noscript>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="fa.ico">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
