--- a/insect.html
+++ b/insect.html
@@ -18,8 +18,7 @@
     <meta property="twitter:description" content="AI가 당신의 얼굴을 분석하여 어떤 곤충상에 가까운지 알려드립니다.">
     <meta property="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
-    <noscript><link rel="stylesheet" href="style.css"></noscript>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="fa.ico">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
