--- a/sentiment.html
+++ b/sentiment.html
@@ -54,12 +54,12 @@
       // Your web app's Firebase configuration
       // IMPORTANT: Replace with your actual Firebase project configuration
       const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
+        apiKey: "AIzaSyBumYJj1X1KrjwjWTZhGuO0B-xZJj1fLsE",
         authDomain: "anse-sample1-46739525-2d1c0.firebaseapp.com",
         projectId: "anse-sample1-46739525-2d1c0",
         storageBucket: "anse-sample1-46739525-2d1c0.appspot.com",
         messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-        appId: "YOUR_APP_ID"
+        appId: "1:164266713411:web:31e470b1a7320aa6028ff6"
       };
 
       // Initialize Firebase
