--- a/sentiment.html
+++ b/sentiment.html
@@ -204,43 +204,40 @@
             sentimentQuote.textContent = '데이터를 불러오는 중...';
             sentimentImage.style.display = 'none';
 
-            const sentimentMap = {
-                "Extreme Fear": {
-                    image: "images/extremefear.png",
-                    quote: "“모두가 무서울 때, 기회는 조용히 옵니다.”"
-                },
-                "Fear": {
-                    image: "images/fear.png",
-                    quote: "“불안할수록, 서두르지 마세요.”"
-                },
-                "Neutral": {
-                    image: "images/neutral.png",
-                    quote: "“지금은 결정보다 관찰의 시간.”"
-                },
-                "Greed": {
-                    image: "images/greed.png",
-                    quote: "“욕심이 생길수록, 팔 이유를 점검하세요.”"
-                },
-                "Extreme Greed": {
-                    image: "images/extremegreed.png",
-                    quote: "“안 사면 불안할 때가 가장 위험합니다.”"
-                }
-            };
-
             db.collection('market_sentiment').doc('cnn_fng').get()
                 .then((doc) => {
                     if (doc.exists) {
                         const data = doc.data();
-                        const sentiment = data.description;
-                        const sentimentData = sentimentMap[sentiment];
+                        const fngValue = data.value; // Get the numeric value
 
-                        if (sentimentData) {
-                            sentimentImage.src = sentimentData.image;
-                            sentimentImage.style.display = 'block';
-                            sentimentQuote.textContent = sentimentData.quote;
+                        let imageSrc = "";
+                        let quoteText = "";
+
+                        if (fngValue >= 0 && fngValue <= 24) {
+                            imageSrc = "images/extremefear.png";
+                            quoteText = "무섭게 떨어지네요.\n모두가 도망칠 때, 오히려 기회가 숨어 있을 수도?";
+                        } else if (fngValue >= 25 && fngValue <= 44) {
+                            imageSrc = "images/fear.png";
+                            quoteText = "점점 무서워집니다.\n이런 구간에서 천천히 분할 매수를 고민해볼 때일까요?";
+                        } else if (fngValue >= 45 && fngValue <= 55) {
+                            imageSrc = "images/neutral.png";
+                            quoteText = "팔까, 살까… 헷갈리는 시기.\n방향이 보일 때까지 차분히 지켜보는 것도 전략입니다.";
+                        } else if (fngValue >= 56 && fngValue <= 75) {
+                            imageSrc = "images/greed.png";
+                            quoteText = "사람들의 욕심이 조금씩 느껴지네요.\n수익이 났다면, 이제는 무엇을 팔까를 고민할 때?";
+                        } else if (fngValue >= 76 && fngValue <= 100) {
+                            imageSrc = "images/extremegreed.png";
+                            quoteText = "주린이도 주식 이야기뿐인 시장.\n나는 이제… 아무것도 안살란다.";
                         } else {
-                            sentimentQuote.textContent = '알 수 없는 시장 상태입니다.';
+                            quoteText = '알 수 없는 시장 상태입니다.';
                         }
+
+                        if (imageSrc) {
+                            sentimentImage.src = imageSrc;
+                            sentimentImage.style.display = 'block';
+                        }
+                        sentimentQuote.textContent = quoteText;
+
                     } else {
                         sentimentQuote.textContent = '아직 데이터가 없습니다. GitHub Actions를 실행해주세요.';
                     }
