feat: Display numeric Fear and Greed Index value

--- a/sentiment.html
+++ b/sentiment.html
@@ -105,6 +105,7 @@
                 <h2>오늘의 금융 시장 심리를 확인해 보세요.</h2>
                 <button id="generate-sentiment">심리 확인하기</button>
                 <div id="sentiment-result" style="margin-top: 20px; text-align: center; display: none;">
+                    <p style="font-size: 1.5em; font-weight: bold; margin-bottom: 10px;">현재 지수: <span id="sentiment-value"></span></p>
                     <img id="sentiment-image" src="" alt="시장 심리 이미지" style="max-width: 100%; height: auto;">
                     <p id="sentiment-quote" style="font-style: italic; margin-top: 10px;"></p>
                 </div>
@@ -199,10 +200,12 @@
             const sentimentResult = document.getElementById('sentiment-result');
             const sentimentImage = document.getElementById('sentiment-image');
             const sentimentQuote = document.getElementById('sentiment-quote');
+            const sentimentValueSpan = document.getElementById('sentiment-value');
             
             sentimentResult.style.display = 'block'; // Make the container visible
             sentimentQuote.textContent = '데이터를 불러오는 중...';
             sentimentImage.style.display = 'none';
+            sentimentValueSpan.textContent = ''; // Clear previous value
 
             db.collection('market_sentiment').doc('cnn_fng').get()
                 .then((doc) => {
@@ -237,6 +240,7 @@
                             sentimentImage.style.display = 'block';
                         }
                         sentimentQuote.textContent = quoteText;
+                        sentimentValueSpan.textContent = fngValue;
 
                     } else {
                         sentimentQuote.textContent = '아직 데이터가 없습니다. GitHub Actions를 실행해주세요.';
