fix: Correct JavaScript syntax error in sentiment.html

--- a/sentiment.html
+++ b/sentiment.html
@@ -236,8 +236,7 @@
                             quoteText = '알 수 없는 시장 상태입니다.';
                         }
 
-                        }
-
+                        } // This brace was extra and caused a syntax error
                         if (imageSrc) {
                             sentimentImage.src = imageSrc;
                             sentimentImage.style.display = 'block';
