--- a/sentiment.html
+++ b/sentiment.html
@@ -104,9 +104,13 @@
             <div class="sentiment-display">
                 <h2>오늘의 금융 시장 심리를 확인해 보세요.</h2>
                 <button id="generate-sentiment">심리 확인하기</button>
-                <div id="sentiment-result" style="margin-top: 20px; text-align: center; display: none;">
-                    <p style="font-size: 1.5em; font-weight: bold; margin-bottom: 10px;">현재 지수: <span id="sentiment-value"></span></p>
-                    <img id="sentiment-image" src="" alt="시장 심리 이미지" style="max-width: 100%; height: auto;">
+
+                <p style="margin-top: 20px; font-size: 0.75em; color: var(--text-color-dark);">
+                    본 지수는 CNN Business의 데이터를 바탕으로 제공되며, 실제 투자 결과에 대한 책임을 지지 않습니다.
+                </p>
+                <div id="sentiment-result" style="margin-top: 0; text-align: center; display: none;">
+                    <p style="font-size: 1.5em; font-weight: bold; margin-bottom: 20px;">현재 지수: <span id="sentiment-value"></span></p>
+                    <img id="sentiment-image" src="" alt="시장 심리 이미지" style="max-width: 100%; height: auto; margin:0 auto;">
                     <p id="sentiment-quote" style="font-style: italic; margin-top: 10px;"></p>
                 </div>
             </div>
@@ -208,51 +212,52 @@
             sentimentValueSpan.textContent = ''; // Clear previous value
 
             db.collection('market_sentiment').doc('cnn_fng').get()
-                .then((doc) => {
-                    if (doc.exists) {
-                        const data = doc.data();
-                        const fngValue = data.value; // Get the numeric value
+            .then((doc) => {
+                let imageSrc = "";
+                let quoteText = "";
+                let fngValue = null;
 
-                        let imageSrc = "";
-                        let quoteText = "";
+                if (doc.exists) {
+                    const data = doc.data();
+                    fngValue = data.value;
 
-                        if (fngValue >= 0 && fngValue <= 24) {
-                            imageSrc = "images/extremefear.png";
-                            quoteText = "무섭게 떨어지네요.\n모두가 도망칠 때, 오히려 기회가 숨어 있을 수도?";
-                        } else if (fngValue >= 25 && fngValue <= 44) {
-                            imageSrc = "images/fear.png";
-                            quoteText = "점점 무서워집니다.\n이런 구간에서 천천히 분할 매수를 고민해볼 때일까요?";
-                        } else if (fngValue >= 45 && fngValue <= 55) {
-                            imageSrc = "images/neutral.png";
-                            quoteText = "팔까, 살까… 헷갈리는 시기.\n방향이 보일 때까지 차분히 지켜보는 것도 전략입니다.";
-                        } else if (fngValue >= 56 && fngValue <= 75) {
-                            imageSrc = "images/greed.png";
-                            quoteText = "사람들의 욕심이 조금씩 느껴지네요.\n수익이 났다면, 이제는 무엇을 팔까를 고민할 때?";
-                        } else if (fngValue >= 76 && fngValue <= 100) {
-                            imageSrc = "images/extremegreed.png";
-                            quoteText = "주린이도 주식 이야기뿐인 시장.\n나는 이제… 아무것도 안살란다.";
-                        } else {
-                            quoteText = '알 수 없는 시장 상태입니다.';
-                        }
-
-                        }
-
-                        if (imageSrc) {
-                            sentimentImage.src = imageSrc;
-                            sentimentImage.style.display = 'block';
-                        }
-                        sentimentQuote.textContent = quoteText;
-                        sentimentValueSpan.textContent = fngValue;
-
+                    if (fngValue >= 0 && fngValue <= 24) {
+                        imageSrc = "images/extremefear.png";
+                        quoteText = "무섭게 떨어지네요.\n모두가 도망칠 때, 오히려 기회가 숨어 있을 수도?";
+                    } else if (fngValue >= 25 && fngValue <= 44) {
+                        imageSrc = "images/fear.png";
+                        quoteText = "점점 무서워집니다.\n이런 구간에서 천천히 분할 매수를 고민해볼 때일까요?";
+                    } else if (fngValue >= 45 && fngValue <= 55) {
+                        imageSrc = "images/neutral.png";
+                        quoteText = "팔까, 살까… 헷갈리는 시기.\n방향이 보일 때까지 차분히 지켜보는 것도 전략입니다.";
+                    } else if (fngValue >= 56 && fngValue <= 75) {
+                        imageSrc = "images/greed.png";
+                        quoteText = "사람들의 욕심이 조금씩 느껴지네요.\n수익이 났다면, 이제는 무엇을 팔까를 고민할 때?";
+                    } else if (fngValue >= 76 && fngValue <= 100) {
+                        imageSrc = "images/extremegreed.png";
+                        quoteText = "주린이도 주식 이야기뿐인 시장.\n나는 이제… 아무것도 안살란다.";
                     } else {
-                        sentimentQuote.textContent = '아직 데이터가 없습니다. GitHub Actions를 실행해주세요.';
+                        quoteText = "알 수 없는 시장 상태입니다.";
                     }
-                })
-                .catch((error) => {
-                    console.error("Error getting document:", error);
-                    sentimentQuote.textContent = '데이터를 불러오는 데 실패했습니다.';
-                });
+
+                    if (imageSrc) {
+                        sentimentImage.src = imageSrc;
+                        sentimentImage.style.display = 'block';
+                    }
+
+                    sentimentQuote.textContent = quoteText;
+                    sentimentValueSpan.textContent = fngValue;
+
+                } else {
+                    sentimentQuote.textContent = '아직 데이터가 없습니다. GitHub Actions를 실행해주세요.';
+                }
+            })
+            .catch((error) => {
+                console.error("Error getting document:", error);
+                sentimentQuote.textContent = '데이터를 불러오는 데 실패했습니다.';
+            });
         });
+
 
         // Disqus configuration (remains unchanged)
         var disqus_config = function () {
