--- a/sentiment.html
+++ b/sentiment.html
@@ -105,16 +105,18 @@
                 <h2>오늘의 금융 시장 심리를 확인해 보세요.</h2>
                 <button id="generate-sentiment">심리 확인하기</button>
 
-                <p style="margin-top: 20px; font-size: 0.75em; color: var(--text-color-dark);">
-                    본 지수는 CNN Business의 데이터를 바탕으로 제공되며, 실제 투자 결과에 대한 책임을 지지 않습니다.
-                </p>
+
                 <div id="sentiment-result" style="margin-top: 0; text-align: center; display: none;">
                     <p style="font-size: 1.5em; font-weight: bold; margin-bottom: 20px;">현재 지수: <span id="sentiment-value"></span></p>
-                    <img id="sentiment-image" src="" alt="시장 심리 이미지" style="max-width: 100%; height: auto; margin:0 auto;">
                     <p id="sentiment-quote" style="font-style: italic; margin-top: 10px;"></p>
+                    <p style="margin-top: 20px; font-size: 0.75em; color: var(--text-color-dark);">
+                        본 지수는 CNN Business의 데이터를 바탕으로 제공되며, 실제 투자 결과에 대한 책임을 지지 않습니다.
+                    </p>
+                    <img id="sentiment-image" src="" alt="시장 심리 이미지" style="max-width: 100%; height: auto; margin:0 auto;">
+ 
                 </div>
             </div>
-
+<hr/>
             <p style="margin-top: 20px; font-size: 0.9em; color: var(--text-color-dark);">
                 <strong>면책 조항:</strong> 본 페이지에서 제공하는 금융 시장 심리 정보는 참고용이며, 어떠한 투자 조언으로도 해석될 수 없습니다. 투자 결정은 개인의 판단과 책임 하에 이루어져야 하며, 항상 전문가와 상의하시기 바랍니다. 시장의 변동성은 매우 크며, 과거의 성과가 미래의 결과를 보장하지 않습니다.
             </p>
@@ -223,19 +225,19 @@
 
                     if (fngValue >= 0 && fngValue <= 24) {
                         imageSrc = "images/extremefear.png";
-                        quoteText = "무섭게 떨어지네요.\n모두가 도망칠 때, 오히려 기회가 숨어 있을 수도?";
+                        quoteText = "무섭게 떨어지네요.\n모두가 도망칠 때, 오히려 기회가 숨어 있다는데?!";
                     } else if (fngValue >= 25 && fngValue <= 44) {
                         imageSrc = "images/fear.png";
-                        quoteText = "점점 무서워집니다.\n이런 구간에서 천천히 분할 매수를 고민해볼 때일까요?";
+                        quoteText = "점점 무서워집니다.\n이런 구간에서는 그동안 사고 싶었던 주식을 잘 살펴봐요.";
                     } else if (fngValue >= 45 && fngValue <= 55) {
                         imageSrc = "images/neutral.png";
-                        quoteText = "팔까, 살까… 헷갈리는 시기.\n방향이 보일 때까지 차분히 지켜보는 것도 전략입니다.";
+                        quoteText = "팔까, 살까… 헷갈리는 시기.\n타이밍을 재지 말고, 꾸준히 살 수 있는 주식을 잘 살펴봐요.";
                     } else if (fngValue >= 56 && fngValue <= 75) {
                         imageSrc = "images/greed.png";
-                        quoteText = "사람들의 욕심이 조금씩 느껴지네요.\n수익이 났다면, 이제는 무엇을 팔까를 고민할 때?";
+                        quoteText = "사람들의 욕심이 조금씩 느껴지네요.\n수익이 났다면, 신중한 매수가 필요한 때입니다. \n현금도 종목이다.";
                     } else if (fngValue >= 76 && fngValue <= 100) {
                         imageSrc = "images/extremegreed.png";
-                        quoteText = "주린이도 주식 이야기뿐인 시장.\n나는 이제… 아무것도 안살란다.";
+                        quoteText = "주린이도 주식 이야기뿐인 시장.\n나는 이제… 아무것도 안살란다. 떠나보낼 주식이라면 지금이 기회.";
                     } else {
                         quoteText = "알 수 없는 시장 상태입니다.";
                     }
@@ -246,7 +248,7 @@
                     }
 
                     sentimentQuote.textContent = quoteText;
-                    sentimentValueSpan.textContent = fngValue;
+                    sentimentValueSpan.textContent = fngValue.toFixed(2);
 
                 } else {
                     sentimentQuote.textContent = '아직 데이터가 없습니다. GitHub Actions를 실행해주세요.';
