Add korea_fear_greed.py script and update requirements.txt

--- a/insect.html
+++ b/insect.html
@@ -137,7 +137,8 @@
         <nav style="display:flex; justify-content: center;"">
             <a href="/insect.html">곤충상 테스트</a>
             <a href="/about-insect.html">곤충상이란?</a>
-            <a href="/sentiment.html">금융 시장 심리</a>
+            <a href="/sentiment.html">미국 금융 시장 심리</a>
+            <a href="/korea-sentiment.html">한국 금융시장 심리</a>
         </nav>
     </header>
     <p style="font-size:5px"> </p>
