--- a/about-insect.html
+++ b/about-insect.html
@@ -61,7 +61,8 @@
         <nav>
             <a href="/insect.html">곤충상 테스트</a>
             <a href="/about-insect.html" style="margin-left: 20px;">곤충상이란?</a>
-            <a href="/sentiment.html" style="margin-left: 20px;">금융 시장 심리</a>
+            <a href="/sentiment.html" style="margin-left: 20px;">미국 금융 시장 심리</a>
+            <a href="/korea-sentiment.html" style="margin-left: 20px;">한국 금융시장 심리</a>
         </nav>
     </header>
     <p style="font-size:5px"> </p>
