Update: Fix HTML duplication and sync scripts

--- a/sentiment.html
+++ b/sentiment.html
@@ -107,7 +107,7 @@
             </div>
 
             <div class="sentiment-display">
-                <h2>오늘의 금융 시장 심리를 확인해 보세요.</h2>
+                <h2>오늘의 미국 금융 시장 심리를 확인해 보세요.</h2>
                 <button id="generate-sentiment">심리 확인하기</button>
 
 
@@ -236,7 +236,7 @@
                         quoteText = "무섭게 떨어지네요.\n모두가 도망칠 때, 오히려 기회가 숨어 있다는데?!";
                     } else if (fngValue >= 25 && fngValue <= 44) {
                         imageSrc = "images/fear.png";
-                        quoteText = "점점 무서워집니다.\n이런 구간에서는 그동안 사고 싶었던 주식을 잘 살펴봐요.";
+                        quoteText = "점점 무서워집니다.\n그래도 이런 구간에서는 그동안 사고 싶었던 주식을 잘 살펴봐요.";
                     } else if (fngValue >= 45 && fngValue <= 55) {
                         imageSrc = "images/neutral.png";
                         quoteText = "팔까, 살까… 헷갈리는 시기.\n타이밍을 재지 말고, 꾸준히 살 수 있는 주식을 잘 살펴봐요.";
