Update:privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -47,11 +47,14 @@
             <button id="theme-switcher">Toggle Theme</button>
         </div>
         <h1><a href="/">오늘 저녁 뭐 먹지?</a></h1>
-        <nav>
-            <a href="/insect.html" style="margin-left: 20px;">곤충상 테스트</a>
-            <a href="/sentiment.html" style="margin-left: 20px;">금융 시장 심리</a>
+        <nav style="display:flex; justify-content:center;">
+            <a href="/insect.html">곤충상 테스트</a>
+            <a href="/about-insect.html">곤충상이란?</a>
+            <a href="/sentiment.html">미국 금융 시장 심리</a>
+            <a href="/korea-sentiment.html">한국 금융시장 심리</a>
         </nav>
     </header>
+    <p style="font-size:5px"> </p>
 
     <main class="container">
         <article>
@@ -106,6 +109,7 @@
 
     <footer class="container">
         <p>Last updated: 2026년 1월 17일</p>
+        <p><a href="/privacy.html">개인정보처리방침</a></p>
     </footer>
 
     <script src="main.js"></script>
@@ -122,6 +126,6 @@
         (d.head || d.body).appendChild(s);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
 </html>
