Update: about-insect.html

--- a/about-insect.html
+++ b/about-insect.html
@@ -18,7 +18,7 @@
     <meta name="twitter:description" content="곤충상 테스트의 목적과 방법, 그리고 각 곤충상의 특징에 대해 자세히 알아봅니다.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="style.css">
     <noscript><link rel="stylesheet" href="style.css"></noscript>
     <link rel="icon" type="image/x-icon" href="fa.ico">
     <!-- Google tag (gtag.js) -->
