Update: privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
     <meta property="twitter:description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다. 사용자의 개인정보 보호를 최우선으로 합니다.">
     <meta property="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="style.css">
     <noscript><link rel="stylesheet" href="style.css"></noscript>
     <link rel="icon" type="image/x-icon" href="fa.ico">
     <!-- Google tag (gtag.js) -->
