--- a/korea-sentiment.html
+++ b/korea-sentiment.html
@@ -99,6 +99,11 @@
                     <div id="loader" class="loader"></div>
                     <p id="score" style="font-size: 4em; font-weight: bold; line-height:1.4em; margin-bottom: 0; margin-top:20px; display: none;">-</p>
                     <p id="last-updated-time" style="font-size: 0.8em; color: var(--text-color-dark); margin-top: 0; display: none;">업데이트 시간: -</p>
+                    <div id="indicator-details" style="display: none; margin-top: 15px; border: 1px solid #ccc; padding: 10px; border-radius: 5px;">
+                        <h4 style="margin: 0 0 10px 0;">지표별 점수</h4>
+                        <p id="indicator-list" style="font-size: 0.9em; line-height: 1.6;"></p>
+                        <p id="indicator-avg" style="font-size: 0.9em; font-weight: bold; margin-top: 10px;"></p>
+                    </div>
                     <p id="status" style="font-size: 1.1em; font-style: italic; margin-top:20px; display: none;">데이터를 불러오는 중...</p>
                     <p class="footer-note" style="font-size: 0.75em; color: var(--text-color-dark); margin-top: 20px;">본 데이터는 자정 기준이며 투자 참고용입니다. 실제 투자 결과에 대한 책임을 지지 않습니다.</p>
                     <img id="sentiment-image" src="" alt="시장 심리 이미지" style="max-width: 100%; height: auto; margin:0 auto; display: none;">
@@ -181,6 +186,9 @@
             const statusEl = document.getElementById('status');
             const sentimentImage = document.getElementById('sentiment-image');
             const lastUpdatedTimeEl = document.getElementById('last-updated-time');
+            const indicatorDetailsEl = document.getElementById('indicator-details');
+            const indicatorListEl = document.getElementById('indicator-list');
+            const indicatorAvgEl = document.getElementById('indicator-avg');
 
             try {
                 const q = db.collection("korea_index").orderBy("timestamp", "desc").limit(1);
@@ -195,6 +203,23 @@
                     scoreEl.textContent = score;
                     statusEl.textContent = doc.status;
                     lastUpdatedTimeEl.textContent = '업데이트 시간: ' + formattedTime;
+
+                    const indicators = [];
+                    if (doc.indicator1) indicators.push(doc.indicator1);
+                    if (doc.indicator2) indicators.push(doc.indicator2);
+                    if (doc.indicator3) indicators.push(doc.indicator3);
+                    if (doc.indicator4) indicators.push(doc.indicator4);
+
+                    if (indicators.length > 0) {
+                        const indicatorTexts = indicators.map((val, i) => `지표 ${i+1}: ${val.toFixed(2)}`);
+                        indicatorListEl.innerHTML = indicatorTexts.join('<br>');
+
+                        const avg = indicators.reduce((a, b) => a + b, 0) / indicators.length;
+                        indicatorAvgEl.textContent = `${indicators.length}개 지표 평균: ${avg.toFixed(2)}`;
+
+                        indicatorDetailsEl.style.display = 'block';
+                    }
+
 
                     let imageSrc = "";
                     if (score <= 25) {
