--- a/korea-sentiment.html
+++ b/korea-sentiment.html
@@ -46,7 +46,7 @@
     </script>
 <style>
         body { font-family: 'Inter', sans-serif; }
-        .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24; }
+        .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'OPSZ' 24; }
         .gauge-gradient {
             background: conic-gradient(from 180deg at 50% 100%, #f87171 0deg, #fbbf24 90deg, #3d84f5 180deg);
         }
@@ -272,13 +272,13 @@
 <div class="rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-primary text-white p-6 shadow-sm">
 <div class="flex items-center justify-between mb-4">
 <h4 class="text-sm font-bold uppercase tracking-wider">KOSPI 200</h4>
-<span class="material-symbols-outlined">insights</span>
+<a href="https://finance.naver.com/sise/" target="_blank"><span class="material-symbols-outlined">insights</span></a>
 </div>
 <div class="flex flex-col gap-1">
-<p class="text-3xl font-black">2,654.32</p>
+<p id="kospi200-value" class="text-3xl font-black">2,654.32</p>
 <div class="flex items-center gap-2">
-<span class="text-sm font-bold bg-white/20 px-2 py-0.5 rounded">+1.24%</span>
-<span class="text-sm text-white/80">▲ 32.50</span>
+<span id="kospi200-change-rate" class="text-sm font-bold bg-white/20 px-2 py-0.5 rounded">+1.24%</span>
+<span id="kospi200-change-point" class="text-sm text-white/80">▲ 32.50</span>
 </div>
 </div>
 </div>
@@ -444,11 +444,78 @@
                         indexHistoryChartEl.style.display = 'none';
                     }
 
+                    // Fetch KOSPI 200 data from Yahoo Finance (client-side, might be flaky)
+                    try {
+                        const response = await fetch('https://query1.finance.yahoo.com/v7/finance/download/^KS200?period1=1609459200&period2=' + Math.floor(Date.now() / 1000) + '&interval=1d&events=history');
+                        const text = await response.text();
+                        const lines = text.split('\n');
+                        
+                        // Find the last two valid data lines
+                        let latestDataLine = null;
+                        let previousDataLine = null;
+                        for (let i = lines.length - 2; i > 0; i--) { // Start from second to last line
+                            const line = lines[i];
+                            if (line.trim().length > 0 && !line.startsWith('Date')) {
+                                if (latestDataLine === null) {
+                                    latestDataLine = line;
+                                } else if (previousDataLine === null) {
+                                    previousDataLine = line;
+                                    break;
+                                }
+                            }
+                        }
+
+                        if (latestDataLine && previousDataLine) {
+                            const latestData = latestDataLine.split(',');
+                            const previousData = previousDataLine.split(',');
+
+                            const currentClose = parseFloat(latestData[4]); // Close price
+                            const previousClose = parseFloat(previousData[4]);
+
+                            if (!isNaN(currentClose) && !isNaN(previousClose)) {
+                                const change = currentClose - previousClose;
+                                const changeRate = (change / previousClose) * 100;
+
+                                kospi200ValueEl.textContent = currentClose.toFixed(2);
+                                kospi200ChangeRateEl.textContent = `${changeRate.toFixed(2)}%`;
+                                kospi200ChangePointEl.textContent = `${change > 0 ? '▲' : '▼'} ${Math.abs(change).toFixed(2)}`;
+
+                                // Apply color for change
+                                // Remove existing color classes first
+                                kospi200ChangeRateEl.classList.remove('bg-emerald-500/20', 'bg-red-500/20', 'bg-white/20');
+                                kospi200ChangePointEl.classList.remove('text-emerald-500/80', 'text-red-500/80', 'text-white/80');
+
+                                if (change > 0) {
+                                    kospi200ChangeRateEl.classList.add('bg-emerald-500/20');
+                                    kospi200ChangePointEl.classList.add('text-emerald-500/80');
+                                } else if (change < 0) {
+                                    kospi200ChangeRateEl.classList.add('bg-red-500/20');
+                                    kospi200ChangePointEl.classList.add('text-red-500/80');
+                                } else {
+                                    kospi200ChangeRateEl.classList.add('bg-white/20'); // Neutral color
+                                    kospi200ChangePointEl.classList.add('text-white/80'); // Neutral color
+                                }
+                            } else {
+                                throw new Error("Invalid KOSPI 200 numerical data.");
+                            }
+                        } else {
+                            throw new Error("KOSPI 200 data not found in response.");
+                        }
+                    } catch (kospiError) {
+                        console.error("Failed to fetch KOSPI 200 data from Yahoo Finance:", kospiError);
+                        kospi200ValueEl.textContent = "N/A";
+                        kospi200ChangeRateEl.textContent = "N/A";
+                        kospi200ChangePointEl.textContent = "N/A";
+                    }
+
                 } else {
                     statusEl.textContent = "업데이트된 데이터가 없습니다.";
                     if (indicatorDetailsEl) indicatorDetailsEl.style.display = 'none';
                     if (chartPlaceholderEl) chartPlaceholderEl.style.display = 'flex'; // Show placeholder if no data
                     if (indexHistoryChartEl) indexHistoryChartEl.style.display = 'none';
+                    kospi200ValueEl.textContent = "N/A";
+                    kospi200ChangeRateEl.textContent = "N/A";
+                    kospi200ChangePointEl.textContent = "N/A";
                 }
             } catch (error) {
                 console.error("Firebase 오류: ", error);
@@ -456,6 +523,9 @@
                 if (indicatorDetailsEl) indicatorDetailsEl.style.display = 'none';
                 if (chartPlaceholderEl) chartPlaceholderEl.style.display = 'flex'; // Show placeholder on error
                 if (indexHistoryChartEl) indexHistoryChartEl.style.display = 'none';
+                kospi200ValueEl.textContent = "N/A";
+                kospi200ChangeRateEl.textContent = "N/A";
+                kospi200ChangePointEl.textContent = "N/A";
             } finally {
                 // Main score, sentiment, and last updated time are always displayed
                 scoreEl.style.display = 'block';
@@ -470,36 +540,5 @@
             setInterval(updateMarketStatus, 60000); // Update every minute
         });
     </script>
-    <script>
-        // Function to update market open/close status
-        function updateMarketStatus() {
-            const now = new Date();
-            const utc = now.getTime() + (now.getTimezoneOffset() * 60000); // UTC time
-            const kstOffset = 9 * 3600000; // KST is UTC+9
-            const kstDate = new Date(utc + kstOffset);
-
-            const dayOfWeek = kstDate.getDay(); // 0 = Sunday, 1 = Monday, ..., 6 = Saturday
-            const hours = kstDate.getHours();
-            const minutes = kstDate.getMinutes();
-
-            const isWeekday = (dayOfWeek >= 1 && dayOfWeek <= 5); // Monday to Friday
-            // Market open: 09:00 to 15:30 KST
-            const isOpenHours = (hours > 9 || (hours === 9 && minutes >= 0)) && (hours < 15 || (hours === 15 && minutes <= 30));
-
-            const marketStatusTextEl = document.getElementById('market-status-text');
-            const marketStatusDotEl = document.getElementById('market-status-dot');
-            const marketStatusIndicatorEl = document.getElementById('market-status-indicator');
-
-            if (isWeekday && isOpenHours) {
-                marketStatusTextEl.textContent = "MARKET OPEN";
-                marketStatusIndicatorEl.className = "flex items-center gap-2 rounded-full bg-emerald-100 dark:bg-emerald-900/30 px-3 py-1 text-xs font-bold text-emerald-600 dark:text-emerald-400";
-                marketStatusDotEl.className = "h-2 w-2 rounded-full bg-emerald-500 animate-pulse";
-            } else {
-                marketStatusTextEl.textContent = "MARKET CLOSE";
-                marketStatusIndicatorEl.className = "flex items-center gap-2 rounded-full bg-red-100 dark:bg-red-900/30 px-3 py-1 text-xs font-bold text-red-600 dark:text-red-400";
-                marketStatusDotEl.className = "h-2 w-2 rounded-full bg-red-500"; // No pulse when closed
-            }
-        }
-    </script>
-    </script>
 </body>
+</html>
