fix: Update favicon path in korea-sentiment.html and add new favicon

--- a/korea-sentiment.html
+++ b/korea-sentiment.html
@@ -20,7 +20,7 @@
 
 <!-- Existing styles and icons -->
 <link rel="stylesheet" href="style.css"/> <!-- Keep this for now, will remove later if Tailwind replaces all -->
-<link rel="icon" type="image/x-icon" href="fa.ico"/>
+<link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
 <!-- Tailwind CSS and Fonts from code.html -->
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -271,7 +271,7 @@
 <!-- Market Indices Quick View -->
 <div class="rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-primary text-white p-6 shadow-sm">
 <div class="flex items-center justify-between mb-4">
-<h4 class="text-sm font-bold uppercase tracking-wider">KOSPI 200</h4>
+<h4 class="text-sm font-bold uppercase tracking-wider">KOSPI</h4>
 <a href="https://finance.naver.com/sise/" target="_blank"><span class="material-symbols-outlined">insights</span></a>
 </div>
 <div class="flex flex-col gap-1">
