--- a/korea-sentiment.html
+++ b/korea-sentiment.html
@@ -115,10 +115,11 @@
 <h2 class="text-lg font-bold tracking-tight">KOSPI Fear &amp; Greed</h2>
 </div>
 <nav class="hidden md:flex items-center gap-6">
-<a class="text-sm font-semibold text-primary" href="#">Dashboard</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="#">Market Analysis</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="#">Portfolio</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="#">Indices</a>
+<a class="text-sm font-semibold text-primary" href="/korea-sentiment.html">한국 금융시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">오늘 저녁 뭐 먹지?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
 </nav>
 </div>
 <div class="flex items-center gap-4">
